@@ -1,8 +1,13 @@
+2009-09-28  Andreas Schwab  <schwab@redhat.com>
+
+	* stdio-common/printf_fp.c: Check for and avoid integer overflows.
+	* stdio-common/vfprintf.c: Likewise.
+
 2009-09-27  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
 	* sysdeps/mach/hurd/mkdirat.c: Include <hurd/fd.h>.
-        (mkdirat): Call __directory_name_split_at instead of
-        __directory_name_split.
+	(mkdirat): Call __directory_name_split_at instead of
+	__directory_name_split.
 
 2009-09-28  Ulrich Drepper  <drepper@redhat.com>
 
